--- a/assets/web/game.scss
+++ b/assets/web/game.scss
@@ -1,4 +1,13 @@
+@font-face {
+  font-family: 'fipps';
+  src: url('fipps.otf');
+}
+
 /** Reset & core **/
+* {
+  font-family: 'fipps';
+  font-weight: normal !important;
+}
 *, *:after, *:before {
   box-sizing: border-box;
   // Disable text selection
@@ -15,10 +24,41 @@ html, body {
   margin: 0;
   padding: 0;
   text-align: center;
+  background: #000;
+  color: #fff;
 }
 img {
   border: 0;
 }
 .hide {
   display: none;
+}
+
+/** Canvas config **/
+$width: 640px;
+$height: 400px;
+
+$scale: 2;
+$scaleWidth: $width * $scale;
+$scaleHeight: $height * $scale;
+
+canvas {
+  /** We want nearest neighbor stretching (pixelated) for all canvas elements **/
+  image-rendering: optimizeSpeed;
+  image-rendering: -moz-crisp-edges;
+  image-rendering: -webkit-optimize-contrast;
+  image-rendering: -o-crisp-edges;
+  image-rendering: pixelated;
+  -ms-interpolation-mode: nearest-neighbor;
+}
+
+.content {
+  position: fixed;
+  width: $scaleWidth;
+  height: $scaleHeight;
+  top: 50%;
+  left: 50%;
+  z-index: 100;
+  margin-top: -($scaleHeight / 2);
+  margin-left: -($scaleWidth / 2);
 }
