[Net] Complete rewrite of net & matchmaking code. Signaling now works. Need to do NAT stuff and then data channel stuff and we're golden.

--- a/assets/web/game.scss
+++ b/assets/web/game.scss
@@ -91,6 +91,11 @@ canvas {
 }
 
 #mainmenu {
+  .connecting {
+    margin-bottom: 50px;
+    color: yellow;
+  }
+
   .background-video, .video-texture {
     position: absolute;
     top: 0;
