Particle effect tests

--- a/assets/web/game.scss
+++ b/assets/web/game.scss
@@ -180,6 +180,20 @@ canvas {
   font-size: 36px;
 }
 
+#debug {
+  position: fixed;
+  left: 0;
+  right: 0;
+  top: 25px;
+  font-size: 24px;
+  text-align: center;
+  text-shadow: 1px 1px 1px #000, -1px -1px 1px #000;
+}
+
+#log, #hud, #debug {
+  z-index: 999999;
+}
+
 #log {
   position: fixed;
   left: 0;
